<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nhap_so_dau_tien"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nhap_so_thu_hai"
        android:inputType="number"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

    <Button
        android:id="@+id/btncong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cong" />

    <Button
        android:id="@+id/btntru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tru" />

    <Button
        android:id="@+id/btnnhan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nhan" />

    <Button
        android:id="@+id/btnchia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chia" />
</LinearLayout>